--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,15 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+web/out.js
+web/service-worker.js
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+generated_state.json
+settings.json
+state.json
+backend-state
