--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Build Electron code
         run: npm run build-electron
       - name: Run Playwright Electron tests
-        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test-electron
+        run: DEBUG=pw:browser* xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test-electron
