--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "serve": "npm run build && ts-node server/host.ts",
-    "build": "esbuild --bundle src/index.ts --outfile=web/out.js && esbuild --bundle src/service-worker.ts --outfile=web/service-worker.js",
+    "build": "esbuild --bundle src/index.ts --outfile=web/out.js --minify && esbuild --bundle src/service-worker.ts --outfile=web/service-worker.js --minify",
     "build-electron": "cd electron && npm run build",
     "test": "tsc --noEmit && npx playwright test",
     "test-electron": "IS_ELECTRON=true npx playwright test",
