--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "chart.js": "^4.5.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.13",
+    "@types/node": "^24.1.0",
     "@types/serviceworker": "^0.0.141",
-    "electron": "^37.2.1",
-    "esbuild": "^0.25.6",
+    "electron": "^37.2.4",
+    "esbuild": "^0.25.8",
     "express": "^5.1.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@eeue56/gweld": "^1.0.1"
   },
   "scripts": {
     "serve": "npm run build && ts-node server/host.ts",
@@ -29,6 +33,6 @@
   "engines": {
     "node": "24.x"
   },
-  "author": "",
+  "author": "eeue56",
   "license": "AGPL-3.0-only"
 }
