--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Build Electron code
         run: npm run build-electron
       - name: Run Playwright tests
-        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npx playwright test
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test
       - name: Run Playwright Electron tests
         run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test-electron
