--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mental-health-tracker",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "main.js",
   "dependencies": {
@@ -32,7 +32,10 @@
     "test-web": "npm run test && npm run test-electron",
     "test-everything": "npm run test-web && npm run test-android",
     "generate": "ts-node src/utils/data.ts",
-    "generate-screenshots": "ts-node screenshots/generate_screenshots.ts"
+    "generate-screenshots": "ts-node screenshots/generate_screenshots.ts",
+    "prepare-android": "npm run build && npx cap copy android",
+    "run-android": "npx cap run android",
+    "run-electron": "cd electron && npm start"
   },
   "engines": {
     "node": "24.x"
