--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
+      - name: Install ts-node
+        run: npm install -g ts-node
       - name: Check if everything compiles
         run: tsc --noEmit
       - name: Build the code
