--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "@capacitor/android": "^7.4.2",
-    "@capacitor/cli": "^7.4.2",
-    "@capacitor/core": "^7.4.2",
     "@eeue56/coed": "^0.4.0",
     "chart.js": "^4.5.0"
   },
@@ -19,7 +16,10 @@
     "electron": "^37.2.4",
     "esbuild": "^0.25.8",
     "express": "^5.1.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/core": "^7.4.2"
   },
   "scripts": {
     "serve-backend": "npm run build && ts-node server/host.ts",
