--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gobaith",
-  "version": "2.0.0",
+  "version": "3.0.0-alpha.0",
   "description": "",
   "main": "main.js",
   "dependencies": {
